DRW: mem leak: sldata->renderpass_ubo.environment not freed in void EEVEE_view_layer_data_free #78551

Closed
opened 2020-07-02 23:04:43 +02:00 by Ulysse Martin · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 20:28, hash: ef0ec01461
Worked: (newest version of Blender that worked as expected)

Guilty commit: ba2c039b05

Short description of error
I just saw, doing a merge for upbge, that mem leaks reported increased of 1, then i had a look at the commit log and saw that this was not freed.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
(on upbge, start standalone player, the mem leaks reported at exit were 2 and after this commit 3)

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 20:28, hash: `ef0ec01461` Worked: (newest version of Blender that worked as expected) Guilty commit: ba2c039b05a84de1dccbeef71b8b2ac89a072869 **Short description of error** I just saw, doing a merge for upbge, that mem leaks reported increased of 1, then i had a look at the commit log and saw that this was not freed. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] (on upbge, start standalone player, the mem leaks reported at exit were 2 and after this commit 3)
Author

Added subscriber: @you.le

Added subscriber: @you.le

Added subscribers: @Jeroen-Bakker, @rjg

Added subscribers: @Jeroen-Bakker, @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

DRW_UBO_FREE_SAFE() is indeed never called for sldata->renderpass_ubo.environment @jbakker.

`DRW_UBO_FREE_SAFE()` is indeed never called for `sldata->renderpass_ubo.environment` @jbakker.

This issue was referenced by a68fd2561e

This issue was referenced by a68fd2561eaf4baad230e00cc8acc7be7b47347f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-07-03 02:28:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78551
No description provided.