Fix T78551 EEVEE: Fix memleak from renderpass ubo