source/blender/draw/engines/eevee/eevee_data.c
@@ -205,6 +205,7 @@ void EEVEE_view_layer_data_free(void *storage)
   DRW_UBO_FREE_SAFE(sldata->renderpass_ubo.spec_color);
   DRW_UBO_FREE_SAFE(sldata->renderpass_ubo.spec_light);
   DRW_UBO_FREE_SAFE(sldata->renderpass_ubo.emit);
+  DRW_UBO_FREE_SAFE(sldata->renderpass_ubo.environment);
 
   if (sldata->material_cache) {
     BLI_memblock_destroy(sldata->material_cache, NULL);
